added all the html and css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <section class="container">
+        <!-- image container -->
         <div class="image-container">
           <div class="grid-item-1">
             <img src="images/programming/codin2.jpg" alt="">
@@ -36,6 +37,7 @@
           </div>
         </div>
 
+         <!-- text container -->
         <div class="text-container">
             <h3>This is a wonderful photo gallery</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere pariatur eligendi quod modi vero repellat laborum consectetur expedita tempore natus fugiat quas, aliquam quaerat praesentium. Perferendis obcaecati rerum aperiam dolores sint quas, sunt quo possimus excepturi voluptatibus rem amet distinctio! Voluptas repellat dolor, tempore, neque qui, facilis aperiam voluptatum eum excepturi ipsum reprehenderit? Esse nulla quo quaerat beatae magnam provident, assumenda nesciunt? Officia illo nulla eius deserunt dignissimos ratione labore, repudiandae corporis velit laboriosam doloribus expedita sed consequatur magnam tempora, veritatis, cumque nihil repellat nam quas. Consectetur nisi earum ducimus architecto amet dolores quas beatae culpa assumenda aspernatur nihil, reiciendis doloremque sed ipsa. Voluptatum rem, incidunt modi architecto deleniti nulla labore. Quidem quae optio velit consequuntur temporibus. Quibusdam incidunt qui, tempora itaque quos temporibus beatae voluptas dolorum pariatur architecto consequatur voluptates quod aliquam non inventore hic, obcaecati nobis laboriosam iste. Totam consectetur laborum odio, numquam quidem voluptas qui placeat exercitationem?</p>
