added footer html and css different way for responsive footer but responsive not done yet

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conceptual one about responsive</title>
     <!-- Connect to the css -->
     <link rel="stylesheet" href="styles/flex_grid.css">
+
+    
 
    
 </head>
@@ -14,7 +16,7 @@
 
     </header>
     <main>
-        <section class="container">
+        <section class="container hide">
             <!-- image container -->
             <div class="image-container">
               <div class="grid-item-1">
